--- a/plans/templates/plan.html
+++ b/plans/templates/plan.html
@@ -24,9 +24,12 @@
     <div class="wrapper">
         <div class="title header center-text">I'm going to</div>
         <div class="plan-text center-text">{{ plan.text }}</div>
-        <div class="share footer center-text">
-            <a href="/{{ plan.pk }}/">Link to this page</a>
-            <a href="/new/">Generate another</a>
+        <div class="share center-text" id="footer">
+            <ul>
+                <li><a href="/{{ plan.pk }}/" >Share this</a></li>
+                <li><a href="/new/" >Generate another</a></li>
+                <li><a href="/">Go home</a></li>
+            </ul>
         </div>
     </div>
 
