--- a/plans/static/plan.css
+++ b/plans/static/plan.css
@@ -3,17 +3,44 @@
     left: 0;
     top: 1ch;
     width: 100%;
+    color: #343434;
     background-color: rgba(226, 87, 87, 0.842);
     text-align: center;
 }
 
-.footer {
+#footer {
     position: fixed;
     left: 0;
     bottom: 1ch;
     width: 100%;
     background-color: rgba(226, 87, 87, 0.842);
     text-align: center;
+}
+
+ul {
+    display:inline-block;
+    /* background:blue; */
+    padding: 0;
+    margin: 0;
+}
+  
+#footer li {
+    display: inline;
+    list-style-type: none;
+}
+  
+a {
+    color: #343434;
+    text-decoration: none;
+    margin: 0 5px
+}
+  
+a:visited {
+    text-decoration: none
+}
+  
+a:hover {
+    text-decoration: underline
 }
 
 .wrapper {
@@ -41,10 +68,11 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    /* width: 100%; */
-    /* height: 100%; */
-    /* margin: 10% 0; */
-    /* min-height: 200px; */
+}
+
+#center li {
+    list-style-type: none;
+    font-size: 0.4em;
 }
 
 .plan-text {
