--- a/plans/templates/index.html
+++ b/plans/templates/index.html
@@ -23,7 +23,10 @@
     <div class="title header center-text">My Plans</div>
     <div class="plan-text center-text"><a href="/new/">If you don't know what to do</a></div>
     <div class="share center-text" id="footer">
-        <a href="/latest/" id="footer">Latest plans</a>
+        <ul>
+            <li><a href="/latest/">Latest</a>,</li>
+            <li><a href="/top/">Most viewed</a></li>
+        </ul>
     </div>
 </div>
 
