--- a/plans/static/styles.css
+++ b/plans/static/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Pribambas';
-    src: url('Pribambas-Regular.eot');
+    src: url('fonts/Pribambas-Regular.woff2');
 }
 
 body {
