--- a/plans/templates/index.html
+++ b/plans/templates/index.html
@@ -63,7 +63,7 @@
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
           <form>
             <div class="form-row">
-              <div class="col-12 col-md-12">
+              <div class="mx-auto col-md-12">
                 <button type="new" class="btn btn-block btn-lg btn-primary">
                     <a href="/new/" class="text-white">I have something to offer</a>
                 </button>
@@ -159,10 +159,10 @@
   
   <!-- Footer -->
   <footer class="footer bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-          <ul class="list-inline mb-2">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+        <div class="col-md text-conter">
+          <ul class="list-inline text-center">
             <li class="list-inline-item">
               <a href="https://okhlopkov.com/">Author</a>
             </li>
@@ -180,7 +180,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
+        <div class="col-md text-center">
             <p class="text-muted small">&copy; Okhlopkov 2019. None Rights Reserved.</p>
         </div>
       </div>
