--- a/plans/static/styles.css
+++ b/plans/static/styles.css
@@ -141,18 +141,18 @@ body {
   }
   
   footer.footer {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 1.5rem;
+    /* padding-bottom: 2rem; */
   }
 
   .idea-footer {
     font-size: 1.5rem;
   }
 
-  @media (min-width: 768px) {
+  /* @media (min-width: 768px) { */
     /* .idea-footer {
         padding-top: 10rem;
         padding-bottom: 5rem;
         font-size: 2rem;
       } */
-  }
+  /* } */
