--- a/plans/static/styles.css
+++ b/plans/static/styles.css
@@ -7,14 +7,14 @@ body {
     font-family: 'Pribambas', 'sans-serif';
   }
   
-  h1,
+  /* h1,
   h2,
   h3,
   h4,
   h5,
   h6 {
     font-weight: 700;
-  }
+  } */
   
   header.masthead {
     position: relative;
