--- a/plans/static/styles.css
+++ b/plans/static/styles.css
@@ -6,22 +6,14 @@
 body {
     font-family: 'Pribambas', 'sans-serif';
   }
-  
-  /* h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: 700;
-  } */
-  
+
   header.masthead {
     position: relative;
     background-color: #343a40;
     background-size: cover;
-    padding-top: 8rem;
-    height: 100vh;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    min-height: 100vh;
   }
   
   header.masthead h1 {
@@ -41,6 +33,7 @@ body {
   @media (min-width: 768px) {
     header.masthead {
         padding-top: 7rem;
+        height: 100vh;
     }
     header.masthead h1 {
         font-size: 8rem;
