--- a/plans/templates/index.html
+++ b/plans/templates/index.html
@@ -56,7 +56,7 @@
   <header class="masthead text-white text-center">
     <div class="container">
       <div class="row">
-        <div class="col-xl-9 mx-auto">
+        <div class="col-lg-8 mx-auto">
           <h1 class="mb-5">Don't know what to do?</h1>
         </div>
         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
