--- a/plans/templates/detail.html
+++ b/plans/templates/detail.html
@@ -44,17 +44,8 @@
 
 <body>
 
-  <!-- Navigation -->
-  <!-- <nav class="navbar navbar-light bg-light static-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <a class="btn btn-primary" href="#">Sign In</a>
-    </div>
-  </nav> -->
-
-  <!-- Masthead -->
-  <header class="masthead text-white text-center">
-    <div class="overlay"></div>
+  <!-- idea -->
+  <header class="idea text-white text-center">
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
@@ -64,58 +55,36 @@
           <form>
             <div class="form-row">
               <div class="col-12 col-md-12">
-                  <h1 class="mb-12 idea-text">{{ plan.text }}</h1>
+                  <h2 class="mb-12 idea-text">{{ plan.text }}</h2>
               </div>
             </div>
           </form>
-        </div>
-      </div>
-
-      <div class="row idea-footer fixed-bottom">
-        <div class="col-md-12 text-center my-auto">
-          <ul class="list-inline">
-            <li class="list-inline-item">
-              <a href="/" class="text-white">Home</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <a href="/new/" class="text-white">Generate your idea</a>
-            </li>
-            <li class="list-inline-item">&sdot;</li>
-            <li class="list-inline-item">
-              <div class="text-white">Views {{ plan.views}}</div>
-            </li>
-          </ul>
         </div>
       </div>
     </div>
   </header>
 
-  <!-- Call to Action -->
-  <!-- <section class="call-to-action text-white text-center">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-9 mx-auto">
-          <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-        </div>
-        <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-          <form>
-            <div class="form-row">
-              <div class="col-12 col-md-9 mb-2 mb-md-0">
-                <input type="email" class="form-control form-control-lg" placeholder="Enter your email...">
-              </div>
-              <div class="col-12 col-md-3">
-                <button type="submit" class="btn btn-block btn-lg btn-primary">Sign up!</button>
-              </div>
-            </div>
-          </form>
+  <footer class="idea-footer">
+    <div class="container-fluid p-0">
+      <div class="row no-gutters">
+        <div class="col-md text-conter">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item">
+                <a href="/" class="text-white">Home</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <a href="/new/" class="text-white">Generate your idea</a>
+              </li>
+              <li class="list-inline-item">&sdot;</li>
+              <li class="list-inline-item">
+                <div class="text-white">Views {{ plan.views}}</div>
+              </li>
+          </ul>
         </div>
       </div>
     </div>
-  </section> -->
-  
-
+  </footer>
 </body>
 
 </html>
